# playmono-public

./: .bazelignore  .bazelrc  .gitignore  README.md  WORKSPACE  playmono-public.code-workspace
.intellij/: playmono.bazelproject  tm-repo.bazelproject
cpp/lib1/: BUILD  README.md  embind.cpp  lib.cpp  lib.h  lib1.go  lib_cgo.h  main.cpp  pybind_module1.cpp
deployment/helloworld/: BUILD  README.md
deployment/helloworld/manifests/: deployment.yaml
golang/: Docs.md  README.md  go.mod  go.sum
golang/cmd/: README.md
golang/cmd/cgo-example/: BUILD  README.md  lib.cpp  lib_cgo.h  main.go
golang/cmd/cgo-lib/: BUILD  main.go
golang/cmd/helloworld/: BUILD  README.md  helloworld.go  helloworld_test.go
golang/pkg/utils/: BUILD  all.go
golang/skylib/: BUILD  README.md  go_repositories.bzl  update_go_deps.sh
infra/setup_dawin/: README.md
jvm/: README.md
jvm/skylib/: README.md  maven_install.json  repositories.bzl
k8s/kind_k8s/: README.md
k8s/kubeless/: README.md  test.js  test.py
k8s/kubeless/docs/: serverless.md
k8s/kubeless/manifests/: configmap.yaml  deployment.yaml  rbac.yaml
nodejs/: README.md
nodejs/cmd/example-server/: BUILD
nodejs/cmd/hello-dep/: BUILD  README.md  main.js
nodejs/example-server/: README.md  app.js
nodejs/hello-dep/: BUILD  package.json
nodejs/hello-lib/: README.md
nodejs/hello_react/: BUILD.bazel  README.md
nodejs/skylib/: BUILD  entrypoint.sh  package.json  repositories.bzl
python/: README.md
python/skylib/: BUILD  README.md  pyproject.toml  repositories.bzl  requirements.txt
research/: .gitignore  README.md
(+54 files in other folders)
