[tool.poetry]
name = "playmono"
version = "0.1.0"
description = ""
authors = ["Jin Huang <huangjinf@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.3" # use the same version of the toolchain
termcolor = "*"
ipython = "*"
ipdb = "*"
requests = "*"
maya = "*"
# pybindcmake = { path = "../pybindcmake/", develop = false }

# [tool.poetry.dev-dependencies]
# pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
